Fix checkbox alignment in editable grid
Addresses RM-27795

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -269,6 +269,7 @@
 
 .slick-editor .form-item-container > .ibox {
   margin: 2px 3px !important;
+  width: auto;
 }
 
 .slick-editor-dropdown {
